force-app/main/default/objects/PHSS_Instructor_Certification__c/PHSS_Instructor_Certification__c.object-meta.xml
<CustomObject>
    <label>PHSS Instructor Certification</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PHSS Instructor Certifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>