force-app/main/default/objects/PHSS_Instructor_Certification__c/fields/Certification_Name__c.field-meta.xml
<CustomField>
    <fullName>Certification_Name__c</fullName>
    <label>Certification Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>