force-app/main/default/objects/PHSS_Instructor_Certification__c/fields/Certification_Version__c.field-meta.xml
<CustomField>
    <fullName>Certification_Version__c</fullName>
    <label>Certification Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>