force-app/main/default/objects/PHSS_Instructor_Certification__c/fields/Expired_On__c.field-meta.xml
<CustomField>
    <fullName>Expired_On__c</fullName>
    <label>Expires On</label>
    <type>Date</type>
</CustomField>