force-app/main/default/objects/PHSS_Instructor_Certification__c/fields/isExpiring__c.field-meta.xml
<CustomField>
    <fullName>isExpiring__c</fullName>
    <formula>IF (Expired_On__c-90 &lt;= TODAY(), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expiring</label>
    <type>Checkbox</type>
</CustomField>