force-app/main/default/objects/PHSS_Instructor_Certification__c/fields/Renew__c.field-meta.xml
<CustomField>
    <fullName>Renew__c</fullName>
    <formula>IF (Expired_On__c &lt; TODAY()-90,
IMAGE(&quot;https://partial-redcross.cs21.force.com/instructorscorner/servlet/servlet.FileDownload?file=015q0000000cqyx&quot;, &quot;Expiring&quot;, 20, 20),&quot;&quot;)</formula>
    <label>Renew</label>
    <type>Text</type>
</CustomField>