force-app/main/default/objects/PHSS_Instructor_Certification__c/fields/SABA_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>SABA_Certificate_Number__c</fullName>
    <externalId>true</externalId>
    <label>SABA Certificate Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>